--- a/scss/main.css
+++ b/scss/main.css
@@ -40,7 +40,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.5;
+  opacity: 0.9;
   visibility: hidden;
 }
 
@@ -66,12 +66,12 @@
   width: 50%;
   height: 100vh;
   overflow: hidden;
+  background: #373737;
 }
 
 .menu-nav {
   margin: 0;
   padding: 0;
-  background: #373737;
 }
 
 * {
